src/tui/views/snapshots/runsite__tui__views__snapshot_tests__confirm_modal_wide.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "render_text(&app, &unicode(), 120, 40)"
---
" █▀▄ █▀▀  RunSite CLI vxxxxx                                                                                            "
" █▀▄ ▄▄█  ada@example.com · profile: default                                                                            "
"          https://api.runsite.app                                                                                       "
"┌ Projects ────────────────────┐┌ Resources · landing ─────────────────────────────────────────────────────────────────┐"
"│▸ landing                    4││▸ ● api                running      1–3                                               │"
"│  blog                       1││  ● web                running      1                                                 │"
"│  Unassigned                 1││  ○ worker             stopped      1                                                 │"
"│                              ││  ◆ pg-main            postgres 16  ●                                                 │"
"│                              ││  ◆ cache              valkey 7.2   ○                                                 │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                             ┌ Confirm ─────────────────────────────────────────────────┐                             │"
"│                             │ Restart api?                                             │                             │"
"│                             │                                                          │                             │"
"│                             │ y confirm · n / esc cancel                               │                             │"
"│                             │                                                          │                             │"
"│                             └──────────────────────────────────────────────────────────┘                             │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"└──────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────┘"
" y confirm · n / esc cancel                                                                              updated 0s ago "
