src/tui/views/snapshots/runsite__tui__views__snapshot_tests__dashboard_ascii_small.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "render_text(&app, &ascii(), 80, 24)"
---
" [RS]  RunSite CLI vxxxxx                                                       "
"       ada@example.com | profile: default                                       "
"       https://api.runsite.app                                                  "
"+ Projects --------------------------------------------------------------------+"
"|> landing                                                                    4|"
"|  blog                                                                       1|"
"|  Unassigned                                                                 1|"
"|                                                                              |"
"|                                                                              |"
"|                                                                              |"
"|                                                                              |"
"|                                                                              |"
"|                                                                              |"
"|                                                                              |"
"|                                                                              |"
"|                                                                              |"
"|                                                                              |"
"|                                                                              |"
"|                                                                              |"
"|                                                                              |"
"|                                                                              |"
"|                                                                              |"
"+------------------------------------------------------------------------------+"
" enter select | / filter | ? help | q quit                       updated 3s ago "
