src/tui/views/snapshots/runsite__tui__views__snapshot_tests__dashboard_loading.snap
---
source: src/tui/views/snapshot_tests.rs
expression: screen
---
" █▀▄ █▀▀  RunSite CLI vxxxxx                                                                                            "
" █▀▄ ▄▄█  profile: default                                                                                              "
"          https://api.runsite.app                                                                                       "
"┌ Projects ⠋ ──────────────────┐┌ Resources ⠋ ─────────────────────────────────────────────────────────────────────────┐"
"│ Loading…                     ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"└──────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────┘"
" enter select · / filter · P profile · ? help · q quit                                                                  "
