src/tui/views/snapshots/runsite__tui__views__snapshot_tests__dashboard_loading_small.snap
---
source: src/tui/views/snapshot_tests.rs
expression: "render_text(&app, &unicode(), 80, 24)"
---
" █▀▄ █▀▀  RunSite CLI vxxxxx                                                    "
" █▀▄ ▄▄█  profile: default                                                      "
"          https://api.runsite.app                                               "
"┌ Projects ⠋ ──────────────────────────────────────────────────────────────────┐"
"│ Loading…                                                                     │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" enter select · / filter · ? help · q quit                                      "
