src/tui/views/snapshots/runsite__tui__views__snapshot_tests__dashboard_narrow_projects.snap
---
source: src/tui/views/snapshot_tests.rs
expression: screen
---
" █▀▄ █▀▀  RunSite CLI vxxxxx                                                    "
" █▀▄ ▄▄█  ada@example.com · profile: default                                    "
"          https://api.runsite.app                                               "
"┌ Projects ────────────────────────────────────────────────────────────────────┐"
"│▸ landing                                                                    4│"
"│  blog                                                                       1│"
"│  Unassigned                                                                 1│"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" enter select · / filter · P profile · ? help · q quit           updated 3s ago "
