src/tui/views/snapshots/runsite__tui__views__snapshot_tests__dashboard_narrow_resources.snap
---
source: src/tui/views/snapshot_tests.rs
expression: screen
---
" █▀▄ █▀▀  RunSite CLI vxxxxx                                                    "
" █▀▄ ▄▄█  ada@example.com · profile: default                                    "
"          https://api.runsite.app                                               "
"┌ Resources · landing ─────────────────────────────────────────────────────────┐"
"│▸ ● api                running      1–3                                       │"
"│  ● web                running      1                                         │"
"│  ○ worker             stopped      1                                         │"
"│  ◆ pg-main            postgres 16  ●                                         │"
"│  ◆ cache              valkey 7.2   ○                                         │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" enter open · D deploy · R restart · S stop · / filter · ? help  updated 3s ago "
