src/tui/views/snapshots/runsite__tui__views__snapshot_tests__dashboard_without_projects.snap
---
source: src/tui/views/snapshot_tests.rs
expression: screen
---
" █▀▄ █▀▀  RunSite CLI vxxxxx                                                                                            "
" █▀▄ ▄▄█  profile: default                                                                                              "
"          https://api.runsite.app                                                                                       "
"┌ Projects ────────────────────┐┌ Resources ───────────────────────────────────────────────────────────────────────────┐"
"│ No projects yet. Create one  ││                                                                                      │"
"│with `runsite project create  ││                                                                                      │"
"│<name>`.                      ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"│                              ││                                                                                      │"
"└──────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────┘"
" enter select · / filter · P profile · ? help · q quit                                                   updated 0s ago "
